--- a/package.json
+++ b/package.json
@@ -7,24 +7,35 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^4",
-    "express": "^4"
+    "@sap/hana-client": "^2.6.61",
+    "@sap/ui5-builder-webide-extension": "^1.0.9",
+    "@sap/xsenv": "^3.1.0",
+    "@sap/xssec": "^3.1.1",
+    "express": "^4",
+    "passport": "^0.4.1"
   },
   "devDependencies": {
     "@sap/ux-specification": "^1.84.5",
-    "sqlite3": "^5"
+    "sqlite3": "5.0.0"
   },
   "scripts": {
-    "start": "cds deploy --to sqlite && cds run"
+    "start": "cds run",
+    "build": "cds build/all --clean"
   },
   "cds": {
+    "hana": {
+      "deploy-format": "hdbtable"
+    },
     "requires": {
       "db": {
-        "kind": "sqlite",
-        "model": "*"
+        "kind": "hana"
+      },
+      "uaa": {
+        "kind": "xsuaa"
       }
     }
   },
   "sapux": [
-    "app/invoice_browser"
+    "app\\invoice_browser"
   ]
 }
